--- a/src/storefront/homepage/index.module.scss
+++ b/src/storefront/homepage/index.module.scss
@@ -5,7 +5,7 @@
 .card {
     width: 400px;
     min-height: 300px;
-    background-color: red;
+    background-color: pink;
     margin: 1.7rem;
     border-radius: 8px;
     position: relative;
@@ -96,14 +96,16 @@
 
     .sub_news_box {
         width: calc(50% - 0.75rem);
-        max-height: 150px;
+        max-height: 170px;
+        min-height: 130px;
         background-color: white;
         border-radius: 8px;
-        padding: 0.6rem;
+        padding: 1rem;
         display: flex;
         cursor: pointer;
         gap: 1rem;
         box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+
         &:hover {
             box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
         }
@@ -120,18 +122,116 @@
         }
 
         .sub_news__content {
-            position: relative;
+
             width: 60%;
             height: 100%;
 
             .sub_news__title {
                 font-size: 1rem;
                 display: -webkit-box;
-                -webkit-line-clamp: 3;
+                -webkit-line-clamp: 2;
+                font-weight: bold;
                 /* Set the number of lines to be displayed before truncating */
                 -webkit-box-orient: vertical;
                 overflow: hidden;
             }
         }
+    }
+}
+
+.word_cut {
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    /* Set the number of lines to be displayed before truncating */
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+
+.btn_see_more {
+    margin-top: 2rem;
+    // color: rgb(243, 61, 61);
+    padding: 0.3rem 1rem;
+    border-radius: 5px;
+}
+
+.small_card {
+    display: flex;
+    gap: 0.9rem;
+    color: black;
+
+    .news {
+        width: calc(100% / 3);
+        max-height: 600px;
+        background-color: white;
+        border-radius: 8px;
+        padding: 1rem;
+        cursor: pointer;
+        box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+
+        &:hover {
+            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        }
+
+        .news_img {
+            width: 100%;
+            height: 300px;
+
+            img {
+                border-radius: 6px;
+                object-fit: cover;
+            }
+        }
+
+        .news_title {
+            margin-top: 0.5rem;
+            text-align: center;
+
+            &:hover {
+                text-decoration: underline;
+            }
+
+            font-size: 1.1rem;
+            font-weight: bold;
+        }
+
+        .news_description {
+            margin-top: 0.5rem;
+            font-size: 0.8rem;
+            color: grey;
+            display: -webkit-box;
+            -webkit-line-clamp: 3;
+            /* Set the number of lines to be displayed before truncating */
+            -webkit-box-orient: vertical;
+            overflow: hidden;
+        }
+    }
+}
+
+.animate_btn {
+    position: absolute;
+    margin-top: 40px;
+    margin-left: 60px;
+    height: 60px;
+    width: 60px;
+    background-color: red;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    animation-name: example;
+    animation-duration: 0.5s ;
+    animation-iteration-count: infinite;
+    cursor: pointer;
+}
+
+@keyframes example {
+    from {
+        width: 50px;
+        height: 50px;
+    }
+
+    to {
+        width: 54px;
+        height: 54px;
     }
 }
