--- a/src/storefront/homepage/index.module.scss
+++ b/src/storefront/homepage/index.module.scss
@@ -101,7 +101,7 @@
     color: black;
     gap: 1.5rem;
     margin-top: 1.5rem;
-
+  
     flex-wrap: wrap;
 
     .sub_news_box {
@@ -113,6 +113,7 @@
         padding: 1rem;
         display: flex;
         cursor: pointer;
+        position: relative;
         gap: 1rem;
         box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 
