--- a/src/storefront/homepage/index.module.scss
+++ b/src/storefront/homepage/index.module.scss
@@ -238,7 +238,7 @@
 }
 .fixed_bg{
     background-attachment: fixed;
-    background-image: url('img/office.jpg');
+    background-image: url('/img/office.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
