--- a/src/storefront/homepage/index.module.scss
+++ b/src/storefront/homepage/index.module.scss
@@ -24,6 +24,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 .card_img {
@@ -250,6 +251,10 @@
 }
 .letter_space{
     letter-spacing: 5px;
+}
+.maps_size{
+    width: 100%;
+    height: 200px;
 }
 .footer{
     height: 450px;
