--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,9 @@
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
-
+.bg_gradient_blue_to_light {
+  background-image: linear-gradient(to right, #0c4a6e, #FEE8B0);
+}
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
