--- a/src/storefront/news/index.module.scss
+++ b/src/storefront/news/index.module.scss
@@ -21,7 +21,7 @@
 
 .card {
   position: relative;
-  background-color: rgb(70, 70, 248);
+  background-color: rgb(74, 74, 199);
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   width: calc(100% / 3);
   border-radius: 10px;
@@ -33,8 +33,8 @@
   &_title {
     font-size: 14px;
     font-weight: bold;
-    color: rgb(252, 184, 58);
-    background-color: rgb(70, 70, 248);
+    color: white;
+    background-color: rgb(74, 74, 199);
     position: absolute;
     top: -27px;
     left: 50%;
