Coding about and admin

--- a/src/components/layout/adminHeader/header.module.scss
+++ b/src/components/layout/adminHeader/header.module.scss
@@ -1,9 +1,9 @@
 .app-bar {
-    background-color: #1a1c24 !important;
+    background-color: #ffffff !important;
     color: #333 !important;
     box-shadow: none !important;
     z-index: 1 !important;
-    color: white !important;
+    // color: white !important;
     .menu-container {
       position: fixed;
       top: 0;
