--- a/src/components/layout/adminLayout/admin.layout.module.scss
+++ b/src/components/layout/adminLayout/admin.layout.module.scss
@@ -1,7 +1,7 @@
 .container {
     display: flex;
     height: calc(100vh - 64px);
-    background-color: #1a1c24;
+    background-color: #fff;
     color: white;
     .main-content {
         position: relative;
