--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,7 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 .bg_gradient_blue_to_light {
-  background-image: linear-gradient(to right, #0c4a6e, #FEE8B0);
+  background-image: linear-gradient(to right, #5e2e86, #FEE8B0);
 }
 @keyframes logo-spin {
   from {
