--- a/src/storefront/homepage/index.module.scss
+++ b/src/storefront/homepage/index.module.scss
@@ -176,7 +176,6 @@
 
     .news {
         width: calc(100% / 3);
-        max-height: 600px;
         background-color: white;
         border-radius: 8px;
         padding: 1rem;
@@ -189,11 +188,10 @@
 
         .news_img {
             width: 100%;
-            height: 300px;
-
+            height: 100%;
             img {
                 border-radius: 6px;
-                object-fit: cover;
+                // object-fit: cover;
             }
         }
 
