--- a/src/components/layout/adminLayout/admin.layout.module.scss
+++ b/src/components/layout/adminLayout/admin.layout.module.scss
@@ -2,11 +2,11 @@
     display: flex;
     height: calc(100vh - 64px);
     background-color: #fff;
-    color: white;
+    color: #212529;
     .main-content {
         position: relative;
         width: 100%;
-        background-color: gray;
+        background-color: #dee2e6;
         border-radius: 20px;
         padding: 1.3rem 1.5rem;
     }
