--- a/src/storefront/homepage/index.module.scss
+++ b/src/storefront/homepage/index.module.scss
@@ -3,9 +3,8 @@
 }
 
 .card {
-    width: 400px;
-    min-height: 300px;
-    background-color: pink;
+    width: 500px;
+    min-height: 400px;
     margin: 1.7rem;
     border-radius: 8px;
     position: relative;
@@ -16,15 +15,18 @@
 
 .lib_card {
     width: 100%;
-    min-width: 200px;
-    min-height: 400px;
-    background-color: pink;
+    height: 350px;
     border-radius: 8px;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
+    gap: 10px;
+    img{
+        height: 100%;
+        object-fit: cover;
+    }
 }
 
 .card_img {
@@ -32,7 +34,7 @@
     height: 100%;
     width: 100%;
     border-radius: 8px;
-    filter: brightness(0.5);
+    filter: brightness(0.8);
 }
 
 .card_img:hover {
@@ -109,8 +111,8 @@
 
     .sub_news_box {
         width: calc(50% - 0.75rem);
-        max-height: 170px;
-        min-height: 130px;
+        max-height: 250px;
+        min-height: 200px;
         background-color: white;
         border-radius: 8px;
         padding: 1rem;
@@ -141,7 +143,7 @@
             height: 100%;
 
             .sub_news__title {
-                font-size: 1rem;
+                font-size: 1.2rem;
                 display: -webkit-box;
                 -webkit-line-clamp: 2;
                 font-weight: bold;
@@ -153,6 +155,14 @@
     }
 }
 
+.fal_img {
+    text-align: center;
+    object-fit: cover;
+    cursor: pointer,
+}
+.fal_img:hover{
+    filter: brightness(0.8);
+}
 .word_cut {
     display: -webkit-box;
     -webkit-line-clamp: 4;
@@ -189,6 +199,7 @@
         .news_img {
             width: 100%;
             height: 100%;
+
             img {
                 border-radius: 6px;
                 // object-fit: cover;
