--- a/src/index.scss
+++ b/src/index.scss
@@ -37,7 +37,9 @@ ul[role='list'],
 ol[role='list'] {
   list-style: none;
 }
-
+li{
+  margin-left: 1rem;
+}
 /* Set core root defaults */
 html:focus-within {
   scroll-behavior: smooth;
