--- a/src/storefront/homepage/index.module.scss
+++ b/src/storefront/homepage/index.module.scss
@@ -3,14 +3,19 @@
 }
 
 .card {
-    width: 500px;
-    min-height: 400px;
     margin: 1.7rem;
     border-radius: 8px;
     position: relative;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    color: black;
+    cursor: pointer;
+}
+
+.card:hover {
+    color: orange;
 }
 
 .lib_card {
@@ -23,7 +28,8 @@
     justify-content: center;
     cursor: pointer;
     gap: 10px;
-    img{
+
+    img {
         height: 100%;
         object-fit: cover;
     }
@@ -160,9 +166,11 @@
     object-fit: cover;
     cursor: pointer,
 }
-.fal_img:hover{
+
+.fal_img:hover {
     filter: brightness(0.8);
 }
+
 .word_cut {
     display: -webkit-box;
     -webkit-line-clamp: 4;
