--- a/src/storefront/news/index.module.scss
+++ b/src/storefront/news/index.module.scss
@@ -21,20 +21,22 @@
 
 .card {
   position: relative;
-  background-color: rgb(74, 74, 199);
+  background-color: #5E2E86;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   width: calc(100% / 3);
   border-radius: 10px;
   display: flex;
   height: 300px;
-  padding: 1rem;
+  padding: 0;
   flex-direction: column;
+  // overflow: auto;
   gap: 13px;
+
   &_title {
     font-size: 14px;
     font-weight: bold;
     color: white;
-    background-color: rgb(74, 74, 199);
+    background-color: #5E2E86;
     position: absolute;
     top: -27px;
     left: 50%;
@@ -47,8 +49,15 @@
   &_content_news {
     background: white;
     max-height: 60px;
-    padding: 1rem;
+    padding: 0.5rem;
     width: 100%;
     border-radius: 5px;
+    overflow: auto;
+    cursor: pointer;
+    margin-top: 0.8rem;
+  }
+
+  &_content_news:hover {
+    background-color: rgb(216, 213, 213);
   }
 }
