--- a/src/storefront/news/index.module.scss
+++ b/src/storefront/news/index.module.scss
@@ -18,6 +18,11 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.newest_new {
+  display: flex;
+  color: black;
+  gap: 1.5rem;
+}
 
 .card {
   position: relative;
@@ -48,11 +53,11 @@
 
   &_content_news {
     background: white;
-    max-height: 60px;
-    padding: 0.5rem;
+    // max-height: 60px;
+    padding: 0.8rem;
     width: 100%;
     border-radius: 5px;
-    overflow: auto;
+    text-wrap: pretty;
     cursor: pointer;
     margin-top: 0.8rem;
   }
@@ -60,4 +65,28 @@
   &_content_news:hover {
     background-color: rgb(216, 213, 213);
   }
+}
+
+.journal_img{
+  width: 300px;
+  // height: 600px;
+}
+.btn_see_more {
+  margin-top: 2rem;
+  // color: rgb(243, 61, 61);
+  padding: 0.3rem 1rem;
+  border-radius: 5px;
+}
+.card_science{
+  width: calc(100% - 16rem);
+
+}
+.card_science_description{
+  display: -webkit-box;
+  font-size: 14px;
+  -webkit-line-clamp: 3;
+  font-weight: 500;
+  /* Set the number of lines to be displayed before truncating */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
